# enlarge_msa

./: .env.yml  .gitignore  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  README.rst  enlarge_MSA.ipynb  pyproject.toml  requirements_dev.txt  tox.ini
docs/: Makefile  conf.py  enlarge_msa.rst  index.rst  installation.rst  make.bat  modules.rst  usage.rst
src/enlarge_msa/: __init__.py  blast.py  cli.py  mmseqs2.py
tests/: __init__.py  test_enlarge_msa.py  test_mmseqs2.py
