[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enlarge_msa"
version = "0.1.0"
description = "Enlarge the MSA to improve Alphafold/Colabfold performance."
readme = "README.rst"
authors = [
  {name = "Samuel Murail", email = "samuel.murail@u-paris.fr"}
]
maintainers = [
  {name = "Samuel Murail", email = "samuel.murail@u-paris.fr"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/samuelmurail/enlarge_msa/issues"
changelog = "https://github.com/samuelmurail/enlarge_msa/blob/master/changelog.md"
homepage = "https://github.com/samuelmurail/enlarge_msa"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

